	been changed to return the stand-alone one. (closes issue #87).
	* containers/Note.py: Checked in Gabriels fix for from_hertz. (closes 
	issue #82)
	* midi/Sequencer.py, midi/SequencerObserver.py: Added sleep message, 
	to be able to switch out time.sleep with something else
	* midi/fluidsynth.py: Added simple API to record a wave file.

================================================================================

	0.4.2.3
	Jul 7, 2009

	* extra/MusicXML.py: Applied Javier's patch fixing beat divisions. 
	* Almost every file: Updated copyright information. Closes issue #78.
	* Added something resembling an AUTHORS file. With only two main 
	developers this doesn't make much sense, but, err, at least we are 
	prepared for a glorious future! Closes issue #79.
	* Added a THANKS file and went through past issues and mails to gather
	full names and addresses. If you have been left out or don't want to 
	be listed; let me know. (closes issue #80).
	* Added a copy of the full GPL v3 license. (closes issue #81)

================================================================================

	0.4.2.2
	Jul 3, 2009

	* extra/MusicXML.py: MusicXML exporting functions by Javier Palanca. 
	(started issue #63). 
	* containers/Track.py: Added `return self` to methods in Track.
	Check for None in chords, in method from_chords. 
	* midi/Sequencer.py: Fixed bug. Added support for rests in 
	play_NoteContainer and stop_NoteContainer.

================================================================================

	0.4.2.1
	Jul 2, 2009

	* midi/SequencerObserver.py: A new easy to extend base class that 
	can be used to observe Sequencer objects (closes issue #46).
	* midi/tunings.py: Added find_chord_fingering to StringTuning.
	(closes issue #70).
	* core/chords.py: Raise FormatError in from_shorthand if shorthand is 
	invalid.
	* containers/Track.py: Added from_chords (started issue #74).

================================================================================
